<resources>
    <string name="app_name">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="task">Task</string>
    <string name="type_task">Type task</string>
    <string name="type_description">Type description</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose Time</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete_button">delete_button</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="completed">COMPLETED</string>
    <string name="don_t_be_lazy_add_some_todos">Don\'t be lazy add some todos</string>
    <string name="tag">addTodo</string>
    <string name="edit_button">edit button</string>
    <string name="bell_button">bell button</string>
    <string name="delete_task">DELETE TASK!</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_the_task">Are you sure you want to delete the task?</string>
    <string name="error_message">Add a title to add a todo</string>
</resources>