<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="addTodoViewModel"
            type="com.dino.todo.home.AddTodoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".home.AddTodoFragment">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/add_task"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/set_reminder"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/description_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/task"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/type_task"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:maxLines="4"
                android:hint="@string/type_description"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/description"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/title_edit_text" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/time"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTime"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/choose_date"
                android:focusable="false"
                android:onClick="@{() -> addTodoViewModel.onDateClick()}"
                android:inputType="date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/editTextTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/choose_time"
                android:focusable="false"
                android:onClick="@{() -> addTodoViewModel.onTimeClick()}"
                android:inputType="time"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editTextDate"
                app:layout_constraintTop_toTopOf="@+id/editTextDate"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="21dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/ubuntu"
                android:text="@android:string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blue_700"
                android:textSize="18sp"
                android:onClick="@{() -> addTodoViewModel.onCancelClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="21dp"
                android:background="@drawable/edit_text_border"
                android:backgroundTint="@color/blue_700"
                android:text="@string/add"
                android:onClick="@{() -> addTodoViewModel.onSubmitClick()}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/button" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete_button"
                android:onClick="@{() -> addTodoViewModel.onCancelClick()}"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>