<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="androidx.core.content.ContextCompat"/>
        <variable
            name="homeViewModel"
            type="com.dino.todo.home.HomeViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.AppCompat.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Widget.AppCompat.ActionBar">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_todo"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                tools:context=".home.HomeActivity">

                <TextView
                    android:id="@+id/todo_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:paddingBottom="10dp"
                    android:text="@string/to_do_list"
                    android:textColor="@color/blue_700"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:visibility="@{homeViewModel.todo.size()>0?View.VISIBLE:View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/todo_heading"
                    tools:layout_editor_absoluteX="-16dp"
                    tools:listitem="@layout/todo_item">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/todo_item">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:paddingBottom="10dp"
                    android:text="@string/completed"
                    android:visibility="@{homeViewModel.completedTodo.size()>0?View.VISIBLE:View.INVISIBLE}"
                    android:textColor="@color/blue_700"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/add_task"
            android:onClick="@{() -> homeViewModel.onAddTodoClick()}"
            app:backgroundTint="@color/blue_700"
            app:srcCompat="@drawable/ic_plus"
            app:tint="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_margin="21dp"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="18sp"
            android:visibility="@{(homeViewModel.completedTodo.size()>0 || homeViewModel.todo.size()>0)?View.INVISIBLE:View.VISIBLE}"
            android:gravity="center|center_horizontal"
            android:text="@string/don_t_be_lazy_add_some_todos"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
